Add realization of method 'findById' in TrainingDaoImpl with tests